--- a/package.json
+++ b/package.json
@@ -18,16 +18,17 @@
   },
   "homepage": "https://github.com/jsills3110/NewsScraper#readme",
   "dependencies": {
-    "axios": "^0.19.1",
+    "axios": "^0.19.2",
     "cheerio": "^1.0.0-rc.3",
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
+    "cookie-parser": "^1.4.5",
+    "debug": "^4.1.1",
     "express": "^4.17.1",
-    "express-handlebars": "^3.1.0",
-    "hbs": "~4.0.4",
-    "http-errors": "~1.6.3",
-    "mongoose": "^5.8.7",
-    "morgan": "~1.9.1",
+    "express-handlebars": "^4.0.0",
+    "hbs": "^4.1.0",
+    "http-errors": "^1.7.3",
+    "minimist": "^1.2.5",
+    "mongoose": "^5.9.6",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.2"
   }
 }
